// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character reducer should return the initial state 1`] = `
Object {
  "instance": null,
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the instance "LOAD_CHARACTER" 1`] = `
Object {
  "instance": undefined,
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the instance updated "UPDATE_CHARACTER" 1`] = `
Object {
  "instance": Object {
    "name": "Testing",
  },
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the itens "LISTING_CHARACTERS" 1`] = `
Object {
  "instance": null,
  "itens": Array [],
  "series": Array [],
}
`;

exports[`Character reducer should return the series "LISTING_SERIES" 1`] = `
Object {
  "instance": null,
  "itens": Array [],
  "series": undefined,
}
`;
